[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
license_file = LICENSE
requires-dist =

## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/0k/%%name%%
license = BSD 3-Clause License
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Unix Shell
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[backwards_compat]
## without this ``pip uninstall`` fails on recent version of setuptools
## (tested failing with setuptools 34.3.3, working with setuptools 9.1)
zip-safe = False


[bdist_wheel]
universal = 1


[files]
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py
## Note: d2to1 maps ``setup.py``'s ``py_modules`` to ``modules`` here.
## This is required for single-file module, this allows the ``entry_point``
## to reference ``docshtest``. Besides, this is needed also for direct python
## API usage.
modules =
    docshtest

## We can't use scripts to share these simply as extension managed ``.py``
## is not correctly handled for both windows and linux to be happy.
# scripts =
#     docshtest

[entry_points]
console_scripts =
    ## will generate correct files with adequate extenstion in windows
    ## and linux, contrary to 'scripts'. Note that it requires 'docshtest'
    ## to be declared as a module also.
    docshtest = docshtest:entrypoint


[flake8]
ignore = E265,W391,E262,E126,E127,E266
max-line-length = 80
max-complexity = 10

